# bayex

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-publish.yml  tests.yml
bayex/: __init__.py  acq.py  domain.py  gp.py  gp_test.py  observables.py  optim.py  optimizer.py  optimizer_test.py  screen.py  types.py
bayex/src/: acq.py  domain.py  gp.py  optimizer.py  optimizer_test.py  test_gp.py
bojax/: __init__.py  acq.py  gp.py  observables.py  optim.py  screen.py
bojax/src/: acq.py  optimizer.py  test_gp.py  test_optimizer.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: bayex.acq.rst  bayex.domain.rst  bayex.gp.rst  bayex.optimizer.rst  index.rst
tests/: domain_test.py  test_acq.py  test_gp.py  test_optim.py  test_optimizer.py
