[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayex"
version = "0.2.2"
description = "Minimal Bayesian Optimization in JAX using Gaussian Processes."
readme = "README.md"
authors = [{name = "Albert Alonso", email = "alonfnt@pm.me"}, ]
license = {file = "LICENSE"}
keywords = ["jax", "bayesian-optimization", "automatic-differentiation", "gaussian-process", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["jax", "jaxlib", "numpy", "optax"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["bayex"]

[project.urls]
"Homepage" = "https://github.com/alonfnt/bayex"
"Documentation" = "https://github.com/alonfnt/bayex"
"Source" = "https://github.com/alonfnt/bayex"
"Bug Tracker" = "https://github.com/alonfnt/bayex/issues"
